--- a/css/style.css
+++ b/css/style.css
@@ -268,7 +268,10 @@ nav {
 
 .service {
   max-width: 500px;
-  margin: 0 auto;
+  margin: 2em auto;
+  background-color: rgb(8 8 8 / 76%);
+  border-radius: 10px;
+  padding: 1em 0.5em 0 0.5em;
 }
 
 @media (min-width: 800px) {
